--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -1,6 +1,11 @@
 /*Familias de fuentes*/
-$Bebas: 'Bebas Neue', cursive;
-$Montserrat: 'Montserrat', sans-serif;
+$bebas: 'Bebas Neue', cursive;
+$montserrat: 'Montserrat', sans-serif;
+
+/*Paletas de colores*/
+$color-secundario: #ffffff;
+$color-primario: #000000;
+$color-terciario: #343a40;
 
 /*Tamaños de fuente*/
 $titulo: 8rem;
@@ -9,7 +14,9 @@ $x-large: 3.5rem;
 $large: 3rem;
 $medium: 2.5rem;
 $small: 2rem;
-$x-small: 1.2rem; 
+$x-small: 1.2rem;
+$xx-small: 1rem; 
+
 
 /*Peso de fuente*/
 $font-regular: 400;
