--- a/assets/sass/base/_reset.scss
+++ b/assets/sass/base/_reset.scss
@@ -1,3 +1,8 @@
+body *{
+    margin: 0;
+    border: 0;
+    padding: 0;
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
