--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -7,13 +7,29 @@ $color-secundario: #ffffff;
 $color-primario: #000000;
 $color-terciario: #343a40;
 
-/*Tamaños de fuente-movil*/
-$xx-large: 3.75rem;
-$x-large: 3.125rem;
-$large: 2.5rem;
-$medium: 1.875rem;
-$small: 1.25rem;
-$texto: 0.875rem;
+/*Tamaños de fuente*/
+$xx-large: 14.375rem;
+$x-large: 11.875rem;
+$large: 9.375rem;
+$medium: 7.1875rem;
+$small: 5rem;
+$texto: 2rem;
+
+/*Tamaños de fuente pantallas GRANDES*/
+$lg-xx-large: 21rem;
+$lg-x-large: 17rem;
+$lg-large: 13rem;
+$lg-medium: 9.5rem;
+$lg-small: 6rem;
+$lg-texto: 3.2rem;
+
+/*Tamaños de fuente-MOVIL*/
+$sm-xx-large: 6rem;
+$sm-x-large: 5rem;
+$sm-large: 4rem;
+$sm-medium: 3rem;
+$sm-small: 2rem;
+$sm-texto: 1.4rem;
 
 
 /*Peso de fuente*/
