--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,7 +13,7 @@
 @import 'layout/navigation';
 @import 'layout/grid';
 @import 'layout/header';
-@import 'layout/main';
+@import 'layout/trabajos';
 @import 'layout/footer';
 @import 'layout/sidebar';
 @import 'layout/forms';
