problema con vh v2
pequeño ajuste con el trabajo para enfocarme solo en el problema con el vhr

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10421,6 +10421,9 @@ main {
   height: 100vh;
   background-color: black;
 }
+.trabajos__container {
+  max-width: 100%;
+}
 .trabajos__boton {
   font-family: "Bebas Neue", cursive;
   font-weight: 400;
