--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -2,11 +2,7 @@
     height: 100vh;
     background-color: #ffffff;
     padding-top: 80px;
-    margin: 0 12%;
-
-    &__container{
-        max-width: 90%;
-    }
+    margin: 0 0%;
 
     &__parrafo-2__container{
         margin-top: 20px;
@@ -17,18 +13,45 @@
         white-space: nowrap;
     }
     &__texto-1{
+        @include bebas-2xl;
+        color: black;
+        font-size: 14.757481940144478vh;
+    }
+    &__texto-2{
+        @include bebas-s;
+        color: black;
+        font-size: 5.159958720330238vh;
+    }
+    &__boton-1{
+        @include bebas-l;
+        font-size: 9vh;
+    }
+    &__boton-2{
+        @include bebas-m;
+        font-size: 7vh;
+        margin: 5px; 
+    }
+    /*&__texto-1{
         @include bebas-sm-2xl;
+        font-size: 6.191950464396285vh;
+        color: black;
     }
     &__texto-2{
         @include bebas-sm-s;
+        color: black;
+        font-size: 2.063983488132095vh;
     }
     &__boton-1{
         @include bebas-sm-l;
         white-space: nowrap;
+        color: black;
+         font-size: 4.12796697626419vh;
     }
     &__boton-2{
         @include bebas-sm-m;
-    }
+        color: black;
+        font-size: 3.0959752321981426vh;
+    }*/
 }
 
 
@@ -36,25 +59,28 @@
 @media (min-width: 768px) {
     .hero{
         margin: 0 auto;
-        padding-top: 5%;
 
         &__container{
             max-width: 90%;
         }
 
-        &__texto-1{
+        /*&__texto-1{
             @include bebas-2xl;
+            font-size: 14.757481940144478vh;
         }
         &__texto-2{
             @include bebas-s;
+            font-size: 5.159958720330238vh;
         }
         &__boton-1{
             @include bebas-l;
+            font-size: 9.597523219814242vh;
         }
         &__boton-2{
             @include bebas-m;
+            font-size: 7.430340557275541vh;
             margin: 10px 5px; 
-        }
+        }*/
     }
 }
 
@@ -63,7 +89,6 @@
 @media (min-width: 1199.98px) {
     .hero{
         margin: 0 auto;
-        padding-top: 5%;
 
         &__container{
             max-width: 90%;
@@ -71,15 +96,19 @@
 
         &__texto-1{
             @include bebas-lg-2xl;
+            font-size: 21.671826625387vh;
         }
         &__texto-2{
             @include bebas-lg-s;
+            font-size: 6.191950464396285vh;
         }
         &__boton-1{
             @include bebas-lg-l;
+            font-size: 13.415892672858616vh;
         }
         &__boton-2{
             @include bebas-lg-m;
+            font-size: 9.803921568627452vh;
             margin: 6px 5px; 
         }
     }
