--- a/assets/sass/layout/_trabajos.scss
+++ b/assets/sass/layout/_trabajos.scss
@@ -3,7 +3,7 @@ main{
 }
 .trabajos{
     padding-top: 100px;
-    height: 100vh;
+    height: 100%;
     background-color: black;
 
     &__container{
@@ -21,8 +21,6 @@ main{
 @media (min-width: 768px) {
     .trabajos{
         padding-top: 80px;
-        height: 100vh;
-        background-color: black;
     
         &__boton{
             @include bebas-l;
@@ -34,10 +32,7 @@ main{
 // Large devices (desktops, less than 1200px)
 @media (min-width: 1199.98px) {
     .trabajos{
-        padding-top: 80px;
-        height: 100vh;
-        background-color: black;
-    
+        padding-top: 130px;
         &__boton{
             @include bebas-lg-l;
             margin-bottom:  40px;
