--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10312,6 +10312,8 @@ textarea {
 
 html {
   font-size: 10px;
+  -moz-text-stroke: 0.5px;
+  -moz-text-stroke-color: same color as text;
 }
 
 #navegacion {
@@ -10366,7 +10368,7 @@ html {
   width: 100%;
   padding-right: 1%;
   position: fixed;
-  top: 94vh;
+  bottom: 0.5vh;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -10706,6 +10708,15 @@ main {
     animation-duration: 0.4s;
   }
 }
+.sobremi__hero {
+  background: url(../../../assets/img/Graduadisimo-campeon-color.png) white;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  height: 100vh;
+  width: 100%;
+}
+
 .navbar-toggler {
   border: none !important;
 }
