--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -55,7 +55,7 @@
     width: 100%;
     padding-right: 1%;
     position: fixed;
-    top: 94vh;
+    bottom: 0.5vh;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
